--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  <!-- test-->
   <body>
     <header class="header">
       <div class="container">
