--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <div class="container">
+        <ul class="gallery"></ul>
         <h1 class="main-title">Gallery</h1>
         <a class="back-link" href="./index.html">Go back</a>
       </div>
